version 1.2
- added agsXMPP.protocol.x.muc.user.Destroy (see: http://forum.ag-software.de/forum.php?req=thread&postid=3663&nocount=1)
- fixed a bug in clientsocket which can cause reconnect problems under some conditions
- fixed Nickname bug in agsXMPP.protocol.extensions.bookmarks.Conference
- added  new constructor to XmppClientConnenction

version 1.1
============
- added TLS for Compact Framework
- bugfix in clientsocket.cs which caused reconnect problems in some cases
- some minor bugfixes

version 1.0
============
- added XEP-0153: vCard-Based Avatars
- added bookmark storage XEP-0048
- added message receipts XEP-0184
- added XEP-0047: In-Band Bytestreams (IBB)
- added a hack to not send xmlns="jabbe:client" with all stanzas
- added AutoPresence Property. This sends the own presence in XmppClientConnection automatically after login. If you already
  send your presence after succesful login set AutoPresence to false or remove the SendMyPresence call
- fixed a bug in agsXMPP.protocol.sasl.Mechamism  
- added SASL failure conditions (FailureConditions.cs)
- fixed HasChildElements property in Element.cs
- did some refactoring on Element.cs
- added some members to Element
- added Console Client example
- fixed typos in DiscoManager.cs
- updated caps to teh latest xep version, can create the new ver attrib automatically.
- published first BOSH version. Interoperability only tested with ejabberd2 beta 1
- optimized Polling code
- updated caps to the latest version of the XEP where caps versioning was changed.
- added AMP
- refactored and extended base classes

version 0.95
============
- many improvements and bugfixes
- added more stuff to the MucManager

version 0.93
============
- improvements on socket errors
- imporvements in resource binding. Leave resource empty and the server will asign a resource for you.
- Added ClientName and ClientFeatures
- Automatic response to DiscoInfo requests to clients

version 0.93
============